# pytest-mock-usecase-sample

./: pyproject.toml
app/entrypoints/flask_app/: __init__.py
app/entrypoints/flask_app/api/: __init__.py
app/request_objects/: __init__.py
app/response_objects/: __init__.py
app/use_cases/: hello.py
tests/entrypoints/flask_app/: test_app_with_mock_patch_object.py  test_app_with_pytest_mock.py
